# sci_lib

./: .gitignore  CMakeLists.txt  ScientificLiteratureManager.sln  ScientificLiteratureManager.vcxproj  ScientificLiteratureManager.vcxproj.filters
4.22/: ScientificLiteratureManager.exe - 快捷方式.lnk  main.cpp
4.22/src/core/: config.h  literature.h  parser.h
4.22/src/index/: title_index.h
4.22/src/utils/: file_utils.h
docs/: data_layer_design.md  readme.md
src/analysis/: statistics_analyzer.cpp  statistics_analyzer.hpp
src/cache/: lru_cache.h
src/common/: database.cpp  database.hpp  parse_result.hpp  process_resporter.hpp  serializer.cpp  serializer.hpp  string_pool.cpp  string_pool.hpp  xml_parser.cpp  xml_parser.hpp  xml_value.cpp  xml_value.hpp
src/core/: serializer.h
src/index/: author_index.h  index_manager.h  keyword_index.h
src/search/: searcher.h
src/utils/: logger.h  string_utils.h
test/: test1.cpp
